--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: SmilerSans;
+  font-display: auto;
+  src: local('SmileySans'),url('/public/fonts/SmileySans/SmileySans-Oblique.ttf.woff2') format('woff2');
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -27,6 +32,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  height: 100%;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -63,6 +70,8 @@ button:focus-visible {
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
